--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@openrouter/ai-sdk-provider": "^2.2.3",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-virtual": "^3.13.18",
+    "ai": "^6.0.86",
+    "bun-plugin-tailwind": "^0.1.2",
     "hono": "^4.11.9",
+    "motion": "^12.34.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   }
