--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-virtual": "^3.13.18",
+    "@types/dompurify": "^3.2.0",
     "ai": "^6.0.86",
     "bun-plugin-tailwind": "^0.1.2",
+    "dompurify": "^3.3.1",
+    "highlight.js": "^11.11.1",
     "hono": "^4.11.9",
+    "marked": "^17.0.2",
+    "marked-highlight": "^2.2.3",
     "motion": "^12.34.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "remend": "^1.2.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
