--- a/package.json
+++ b/package.json
@@ -17,23 +17,33 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.44",
+    "@ai-sdk/google": "^3.0.29",
+    "@ai-sdk/openai": "^3.0.29",
+    "@ai-sdk/xai": "^3.0.57",
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-virtual": "^3.13.18",
     "@types/dompurify": "^3.2.0",
     "ai": "^6.0.86",
     "bun-plugin-tailwind": "^0.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.3.1",
     "highlight.js": "^11.11.1",
     "hono": "^4.11.9",
+    "lucide-react": "^0.564.0",
     "marked": "^17.0.2",
     "marked-highlight": "^2.2.3",
     "motion": "^12.34.0",
     "png-chunk-text": "^1.0.0",
     "png-chunks-extract": "^1.0.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "remend": "^1.2.0",
+    "sharp": "^0.34.5",
+    "tailwind-merge": "^3.4.1",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
